--- a/style.css
+++ b/style.css
@@ -1,11 +1,64 @@
+* {
+  margin: 0;
+}
+body,
+html {
+  min-width: 100%;
+  min-height: 100%;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+  background-image: url("./img/battleship.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.container {
+  width: 1100px;
+  margin: 0 auto;
+  min-height: 900px;
+  padding: 30px;
+}
+
+h1 {
+  text-align: center;
+}
+
+.battle__field {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  column-gap: 30px;
+}
+
+.battle {
+  border: 5px solid rgb(178, 156, 123);
+  width: 100%;
+  border-radius: 20px;
+  margin: 30px 0;
+  padding: 10px;
+  position: relative;
+  background-color: rgb(255, 255, 255, 0.8);
+  display: flex;
+  flex-direction: row;
+}
+
 table {
   border-collapse: collapse;
+  margin: 0;
+  min-height: 200px;
 }
 
 td {
-  border: 1px solid #000;
   width: 20px;
   height: 20px;
+  border: 1px solid #b29c7b;
+  color: white;
+  font-family: arial;
+  text-align: center;
+  font-size: 15px;
+  font-weight: 800;
+  line-height: 0px;
 }
 
 .numbers {
@@ -17,9 +70,21 @@ td {
 }
 
 .letters {
-  float: left;
+  width: 267px;
+  height: 20px;
 }
 
 .letters div {
+  float: left;
   width: 23px;
+  height: 20px;
+  text-align: center;
+}
+
+.field-name {
+  font-size: 18px;
+}
+
+hr {
+  border-top: 1px solid #b29c7b;
 }
